# workenv

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  changelog.rst  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
tests/: requirements.in  requirements.txt  test_cli.py  test_config.py
workenv/: __init__.py  actions.py  bash.py  cli.py  config.py  constants.py  io.py
