[metadata]
name = workenv
description = Manage local work environments
long_description = file: README.rst
keywords = bash
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: System :: System Shells
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://radiac.net/projects/workenv/
project_urls =
    Documentation = https://radiac.net/projects/workenv/
    Source = https://github.com/radiac/workenv
    Tracker = https://github.com/radiac/workenv/issues

[options]
python_requires = >=3.8
packages = find:
install_requires = pyyaml
include_package_data = true
zip_safe = false

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    workenv = workenv.cli:run

[tool:pytest]
addopts = --cov=workenv --cov-report=term --cov-report=html
pythonpath = .

[isort]
multi_line_output = 3
line_length = 88
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2

[flake8]
max-line-length = 88
ignore = E501,W503,E203

[mypy]
ignore_missing_imports = True

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
